Fix widget header alignment in IE6 <shudders...>

--- a/nlw/share/skin/s3/css/screen.ie.css
+++ b/nlw/share/skin/s3/css/screen.ie.css
@@ -164,6 +164,10 @@ div#mainNav ul ul.level2.withimage {
     -margin-left: -20px;
 }
 
+body#dashBoard div.widget.tan div.widgetHeader div.widgetHeaderTitle {
+    -margin-left: -11px;
+}
+
 * html div.widget.regular div.widgetHeader h4 span {
     /* Make the spaces above widget titles draggable for IE6: {bz: 1323} */
     -padding-top: 9px !important;
